<resources>
    <string name="app_name">TestApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="back">Back</string>

    <string name="hello_first_fragment">0</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Strings used for buttons -->
    <string name="toast_button">Toast</string>
    <string name="add_one">+1</string>
    <string name="subtract_one">-1</string>
    <string name="random">Random</string>
    <string name="random_title">Random number between 0 and %d.</string>
</resources>